--- a/templates/README.mustache
+++ b/templates/README.mustache
@@ -22,12 +22,11 @@ Python {{{generatorLanguageVersion}}}
 ## Installation & Usage
 ### pip install
 
-If the python package is hosted on a repository, you can install directly using:
+The python package is hosted on [PyPi](https://pypi.org/project/mandolin-python-client/), you can install directly using:
 
 ```sh
-pip install git+https://{{gitHost}}/{{{gitUserId}}}/{{{gitRepoId}}}.git
+pip install mandolin-python-client
 ```
-(you may need to run `pip` with root permission: `sudo pip install git+https://{{gitHost}}/{{{gitUserId}}}/{{{gitRepoId}}}.git`)
 
 Then import the package:
 ```python
